--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "chart.js": "^4.4.4",
         "datatables.net-dt": "^2.1.8",
         "jquery": "^3.7.1"
     }
