--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Fashion - Thời trang Phong cách Việt"
 APP_ENV=local
 APP_KEY=base64:FK36hNsPem0ndHrwiYj1UFOLYXXUpStytXkL5UYCZiI=
 APP_DEBUG=true
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=nguyenxuanbinh2k4@gmail.com
+MAIL_PASSWORD=utdzzitanrshqjcp
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="nguyenxuanbinh2k4@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
