--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,13 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.1|^8.2|^8.3",
+        "artesaos/seotools": "^1.3",
         "barryvdh/laravel-dompdf": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.5",
         "maatwebsite/excel": "^3.1",
         "nwidart/laravel-modules": "10.*",
         "yajra/laravel-datatables": "10.0"
