--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "maatwebsite/excel": "^3.1",
         "nwidart/laravel-modules": "10.*",
         "pusher/pusher-php-server": "^7.2",
+        "thiagoalessio/tesseract_ocr": "^2.13",
         "yajra/laravel-datatables": "10.0"
     },
     "require-dev": {
