--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1|^8.2|^8.3",
         "artesaos/seotools": "^1.3",
+        "asbiin/laravel-webauthn": "4.6",
         "barryvdh/laravel-dompdf": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
@@ -17,6 +18,7 @@
         "nwidart/laravel-modules": "10.*",
         "pusher/pusher-php-server": "^7.2",
         "thiagoalessio/tesseract_ocr": "^2.13",
+        "web-auth/webauthn-lib": "^4.8",
         "yajra/laravel-datatables": "10.0"
     },
     "require-dev": {
@@ -77,6 +79,6 @@
             "pestphp/pest-plugin": true
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true
 }
