--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "artesaos/seotools": "^1.3",
         "asbiin/laravel-webauthn": "4.6",
         "barryvdh/laravel-dompdf": "^3.0",
+        "erusev/parsedown": "^1.7",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
