--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "maatwebsite/excel": "^3.1",
         "nwidart/laravel-modules": "10.*",
         "pusher/pusher-php-server": "^7.2",
+        "spatie/laravel-permission": "^6.10",
         "thiagoalessio/tesseract_ocr": "^2.13",
         "web-auth/webauthn-lib": "^4.8",
         "yajra/laravel-datatables": "10.0"
