--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: Laravel
+name: Laravel CI
 
 on:
   push:
@@ -8,35 +8,56 @@ on:
 
 jobs:
   laravel-tests:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.3'
-    - uses: actions/checkout@v4
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: update packge
-      run: composer update
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-    - name: migrate database
-      run: php artisan migrate
-    - name: seed database
-      run: php artisan db:seed
-    - name: Finnal test
-      run: php artisan test
+      # 1. Thiết lập PHP
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3'
+          extensions: mbstring, bcmath, sqlite
+          ini-values: post_max_size=256M, upload_max_filesize=256M
+
+      # 2. Clone repository
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      # 3. Copy file .env
+      - name: Copy .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      - name: update packge
+        run: composer update
+      # 4. Install Composer dependencies
+      - name: Install dependencies
+        run: composer install --no-ansi --no-interaction --prefer-dist --no-progress
+
+      # 5. Generate application key
+      - name: Generate app key
+        run: php artisan key:generate
+
+      # 6. Set permissions
+      - name: Set directory permissions
+        run: chmod -R 777 storage bootstrap/cache
+
+      # 7. Set up SQLite database
+      - name: Set up database
+        run: |
+          mkdir -p database
+          touch database/database.sqlite
+
+      # 8. Run migrations and seed database
+      - name: Run migrations and seeders
+        env:
+          DB_CONNECTION: sqlite
+          DB_DATABASE: database/database.sqlite
+        run: |
+          php artisan migrate --force
+          php artisan db:seed --force
+
+      # 9. Run tests
+      - name: Run tests
+        env:
+          DB_CONNECTION: sqlite
+          DB_DATABASE: database/database.sqlite
+        run: php artisan test
