--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,4 +1,4 @@
-name: Laravel CI
+name: Laravel CI/CD Workflow
 
 on:
   push:
@@ -8,56 +8,81 @@ on:
 
 jobs:
   laravel-tests:
+
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Thiết lập PHP
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.3'
-          extensions: mbstring, bcmath, sqlite
-          ini-values: post_max_size=256M, upload_max_filesize=256M
+    - name: Check out code
+      uses: actions/checkout@v4
 
-      # 2. Clone repository
-      - name: Check out code
-        uses: actions/checkout@v4
+    - name: Set up PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.3'
+        extensions: mbstring, pdo, sqlite, bcmath
+        ini-values: post_max_size=256M, max_execution_time=300
+        coverage: none
 
-      # 3. Copy file .env
-      - name: Copy .env
-        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      - name: update packge
-        run: composer update
-      # 4. Install Composer dependencies
-      - name: Install dependencies
-        run: composer install --no-ansi --no-interaction --prefer-dist --no-progress
+    - name: Install Composer Dependencies
+      run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
 
-      # 5. Generate application key
-      - name: Generate app key
-        run: php artisan key:generate
+    - name: Install Doctrine DBAL
+      run: composer require doctrine/dbal --no-suggest --prefer-dist --no-progress
 
-      # 6. Set permissions
-      - name: Set directory permissions
-        run: chmod -R 777 storage bootstrap/cache
+    - name: Generate Application Key
+      run: php artisan key:generate
 
-      # 7. Set up SQLite database
-      - name: Set up database
-        run: |
-          mkdir -p database
-          touch database/database.sqlite
+    - name: Set Directory Permissions
+      run: chmod -R 777 storage bootstrap/cache
 
-      # 8. Run migrations and seed database
-      - name: Run migrations and seeders
-        env:
-          DB_CONNECTION: sqlite
-          DB_DATABASE: database/database.sqlite
-        run: |
-          php artisan migrate --force
-          php artisan db:seed --force
+    - name: Prepare SQLite Database
+      run: |
+        mkdir -p database
+        touch database/database.sqlite
 
-      # 9. Run tests
-      - name: Run tests
-        env:
-          DB_CONNECTION: sqlite
-          DB_DATABASE: database/database.sqlite
-        run: php artisan test
+    - name: Run Migrations and Seed Database
+      env:
+        DB_CONNECTION: sqlite
+        DB_DATABASE: database/database.sqlite
+      run: |
+        php artisan migrate --force
+        php artisan db:seed --force
+
+    - name: Run Tests
+      env:
+        DB_CONNECTION: sqlite
+        DB_DATABASE: database/database.sqlite
+      run: php artisan test
+
+  laravel-deploy:
+    runs-on: ubuntu-latest
+    needs: [laravel-tests]
+
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v4
+
+    - name: Set up PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.3'
+    - name: update packge
+      run: composer update
+    - name: Install Composer Dependencies
+      run: composer install --no-dev --optimize-autoloader
+
+    - name: Generate Application Key
+      run: php artisan key:generate
+
+    - name: Run Migrations on Production Database
+      env:
+        DB_CONNECTION: mysql
+        DB_HOST: ${{ secrets.DB_HOST }}
+        DB_PORT: ${{ secrets.DB_PORT }}
+        DB_DATABASE: ${{ secrets.DB_DATABASE }}
+        DB_USERNAME: ${{ secrets.DB_USERNAME }}
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      run: php artisan migrate --force
+
+    - name: Deploy Application
+      run: echo "Deploy completed successfully"
