--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,7 +23,10 @@ jobs:
 
     - name: Install Composer Dependencies
       run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
-
+      
+    - name: Install Doctrine DBAL
+      run: composer require doctrine/dbal --no-suggest --prefer-dist --no-progress
+      
     - name: Copy .env file
       run: |
         if [ ! -f .env ]; then
